include $(top_srcdir)/common.mk

EXTRA_DIST = PollerInterface.h SelectPoller.h TimeoutManager.h

noinst_LTLIBRARIES = libolaio.la
libolaio_la_SOURCES = Descriptor.cpp \
                      IOQueue.cpp \
                      IOStack.cpp \
                      IOUtils.cpp \
                      PollerInterface.cpp \
                      SelectPoller.cpp \
                      SelectServer.cpp \
                      StdinHandler.cpp \
                      TimeoutManager.cpp

